--- a/sj/Cargo.toml
+++ b/sj/Cargo.toml
@@ -19,3 +19,11 @@ serde_json = "1.0.108"
 strum = "0.25.0"
 strum_macros = "0.25.3"
 thiserror = "1.0.51"
+reqwest = { version = "0.11.22", features = ["stream"] }
+futures = "0.3.29"
+tokio = { version = "1.35.0", features = ["full"] }
+inquire = "0.6.2"
+colored = "2.1.0"
+indicatif = "0.17.7"
+async-stream = "0.3.5"
+futures-util = "0.3.29"
