--- a/sj/Cargo.toml
+++ b/sj/Cargo.toml
@@ -25,7 +25,9 @@ futures = "0.3.29"
 tokio = { version = "1.35.0", features = ["full"] }
 inquire = "0.6.2"
 colored = "2.1.0"
-indicatif = "0.17.7"
 async-stream = "0.3.5"
 futures-util = "0.3.29"
 indoc = "2.0.4"
+humantime = "2.1.0"
+log = "0.4.20"
+env_logger = "0.11.0"
