--- a/sj/Cargo.toml
+++ b/sj/Cargo.toml
@@ -14,7 +14,7 @@ chrono = { version = "0.4.31", features = ["serde"] }
 anyhow = "1.0.75"
 clap = { version = "4.4.11", features = ["derive"] }
 directories = "5.0.1"
-subjective = { path = "../subjective" }
+subjective = { path = "../subjective", version = "0.1.0" }
 serde = { version = "1.0.193", features = ["serde_derive"] }
 serde_json = "1.0.108"
 strum = "0.25.0"
@@ -31,3 +31,4 @@ indoc = "2.0.4"
 humantime = "2.1.0"
 log = "0.4.20"
 env_logger = "0.11.0"
+toml = "0.8.12"
