--- a/subjective/Cargo.toml
+++ b/subjective/Cargo.toml
@@ -24,3 +24,4 @@ serde_json = "1.0.108"
 thiserror = "1.0.51"
 directories = "5.0.1"
 colored = "2.1.0"
+linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
