--- a/subjective/Cargo.toml
+++ b/subjective/Cargo.toml
@@ -12,9 +12,9 @@ categories = ["command-line-utilities"]
 [dependencies]
 uuid = { version = "1.6.1", features = [
     "serde",
-    "v4",                # Lets you generate random UUIDs
-    "fast-rng",          # Use a faster (but still sufficiently random) RNG
-    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+    "v4",
+    "fast-rng",
+    "macro-diagnostics",
 ] }
 chrono = { version = "0.4.31", features = ["serde"] }
 serde = { version = "1.0.193", features = ["serde_derive"] }
@@ -25,3 +25,7 @@ thiserror = "1.0.51"
 directories = "5.0.1"
 colored = "2.1.0"
 linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
+diff-struct = { version = "0.5.3", optional = true }
+
+[features]
+diff = ["dep:diff-struct"]
