--- a/sj/Cargo.toml
+++ b/sj/Cargo.toml
@@ -14,7 +14,7 @@ chrono = { version = "0.4.42", features = ["serde"] }
 anyhow = "1.0.100"
 clap = { version = "4.5.51", features = ["derive"] }
 directories = "6.0.0"
-subjective = { path = "../subjective", version = "0.1.0" }
+subjective = { path = "../subjective", version = "*" }
 serde = { version = "1.0.228", features = ["serde_derive"] }
 serde_json = "1.0.145"
 strum = "0.27.2"
