--- a/subjective/Cargo.toml
+++ b/subjective/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "subjective"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2024"
 description = "Library for the Subjective CLI and other related tools."
 license = "MIT"
@@ -10,22 +10,31 @@ keywords = ["subjective", "sj", "cli", "school", "education"]
 categories = ["command-line-utilities"]
 
 [dependencies]
-uuid = { version = "1.18.1", features = [
+uuid = { version = "1.18.1", default-features = false, features = [
     "serde",
     "v4",
     "fast-rng",
     "macro-diagnostics",
 ] }
-chrono = { version = "0.4.42", features = ["serde"] }
-serde = { version = "1.0.228", features = ["serde_derive"] }
-strum = "0.27.2"
+chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
+serde = { version = "1.0.228", optional = true, features = ["serde_derive"] }
+strum = { version = "0.27.2", default-features = false }
 strum_macros = "0.27.2"
-serde_json = "1.0.145"
-thiserror = "2.0.17"
+serde_json = { version = "1.0.145", optional = true }
+thiserror = { version = "2.0.17", default-features = false }
 directories = "6.0.0"
 colored = "3.0.0"
-linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
 diff-struct = { version = "0.5.3", optional = true }
+cfg-if = "1.0.4"
 
 [features]
+default = ["std"]
 diff = ["dep:diff-struct"]
+std = [
+    "serde_json",
+    "serde",
+    "chrono/std",
+    "uuid/std",
+    "strum/std",
+    "thiserror/std",
+]
