--- a/subjective/Cargo.toml
+++ b/subjective/Cargo.toml
@@ -23,7 +23,7 @@ strum_macros = "0.27.2"
 serde_json = { version = "1.0.145", optional = true }
 thiserror = { version = "2.0.17", default-features = false }
 directories = "6.0.0"
-colored = "3.0.0"
+colored = { version = "3.0.0", optional = true }
 diff-struct = { version = "0.5.3", optional = true }
 cfg-if = "1.0.4"
 
@@ -33,6 +33,7 @@ diff = ["dep:diff-struct"]
 std = [
     "serde_json",
     "serde",
+    "colored",
     "chrono/std",
     "uuid/std",
     "strum/std",
